--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.63.0",
     "react-i18next": "^16.0.0",
+    "socket.io-client": "^4.8.1",
     "spring-filter-query-builder": "^1.1.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
